# robotsky_ws

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  build.sh  llvm.sh  setup_can.sh  setup_clangd.sh  setup_git.sh  setup_hardware.sh  shut_ethercat.sh  start_ethercat.sh
src/robotsky_description/: CMakeLists.txt  package.xml
src/robotsky_description/meshes/robotsky_wq/: LB_Hip_Link.STL  LB_Knee_Link.STL  LB_Roll_Link.STL  LB_Wheel_Link.STL  LF_Hip_Link.STL  LF_Knee_Link.STL  LF_Roll_Link.STL  LF_Wheel_Link.STL  RB_Hip_Link.STL  RB_Knee_Link.STL  RB_Roll_Link.STL  RB_Wheel_Link.STL  RF_Hip_Link.STL  RF_Knee_Link.STL  RF_Roll_Link.STL  RF_Wheel_Link.STL  base_link.STL
src/robotsky_description/mjcf/: robotsky_wq.xml
src/robotsky_description/urdf/: robotsky_wq.urdf
src/robotsky_hardware_interface/: CMakeLists.txt  package.xml
src/robotsky_hardware_interface/msg/: MotorFeedback.msg
src/robotsky_hardware_interface/src/: motor_control_test.cpp  motor_control_test_dm.cpp  motor_control_test_rs.cpp
src/robotsky_hardware_interface/src/can/: can_bus_manager.cpp  can_bus_manager.h  can_driver.cpp  can_driver.h  can_interface.h  can_utils.cpp  can_utils.h
src/robotsky_hardware_interface/src/motor/: motor_control.cpp  motor_control.h  motor_data.h
src/robotsky_hardware_interface/src/motor/damiao/: damiao.h  dm4310_ctrl.c  dm4310_drv.c  dm4310_drv.h  serial_port.h  status_check.c  status_check.h
src/robotsky_hardware_interface/src/motor/robstride/: motor_config.cpp  robstride.h
src/robotsky_hardware_interface/src/motor/utils/: cyber_gear_utils.cpp  cyber_gear_utils.h  dm_motor_utils.cpp  dm_motor_utils.h  lk_motor_utils.cpp  rs_motor_utils.cpp  rs_motor_utils.h
src/robotsky_hardware_interface/src/robot/: robot.cpp  robot.h
src/robotsky_hardware_interface/src/test/: motor_set_zero.cpp
src/robotsky_imu/: CMakeLists.txt  package.xml
src/robotsky_imu/launch/: imu.launch.py  rviz.launch.py
src/robotsky_imu/rviz/: imu.rviz
src/robotsky_imu/src/: imu_node.cpp
src/robotsky_imu/src/imu/: ahrs_driver.cpp  ahrs_driver.h  crc_table.cpp  crc_table.h  fdilink_data_struct.h
src/robotsky_interface/: CMakeLists.txt  package.xml
src/robotsky_interface/msg/: MotorCmd.msg  MotorCmds.msg  MotorState.msg  MotorStates.msg  RobotStatus.msg
src/robotsky_interface/srv/: Robot.srv
src/robotsky_motor/: CMakeLists.txt  package.xml
src/robotsky_motor/launch/: hardware.launch.py
src/robotsky_motor/rviz/: urdf.rviz
src/robotsky_motor/src/: motor_control_test_dm.cpp  robot_node.cpp  test_damiao.cpp
src/robotsky_motor/src/can/: can_bus_factory.cpp  can_bus_factory.h  can_bus_manager.cpp  can_bus_manager.h  can_data.h  can_interface.cpp
src/robotsky_motor/src/can/bus/: can_bus_manager.cpp  can_bus_manager.h  dm_can_bus_manager.cpp  dm_can_bus_manager.h  rs_can_bus_manager.cpp  rs_can_bus_manager.h
src/robotsky_motor/src/can/old/: can_driver.cpp  can_driver.h
src/robotsky_motor/src/motor/: cyber_motor_control.cpp  cyber_motor_control.h  dm_motor_control.cpp  dm_motor_control.h  motor_control.cpp  motor_control.h  motor_data.h  motor_factory.cpp  motor_factory.h  rs_motor_control.cpp  rs_motor_control.h
src/robotsky_motor/src/motor/control/: cyber_motor_control.cpp  cyber_motor_control.h  dm_motor_control.cpp  dm_motor_control.h  motor_control.cpp  motor_control.h  rs_motor_control.cpp  rs_motor_control.h
src/robotsky_motor/src/motor/damiao/: dm4310_ctrl.h
src/robotsky_motor/src/motor/robstride/: motor_config.h  robstride.cpp  robstride.h
src/robotsky_motor/src/motor/utils/: cyber_gear_utils.cpp  cyber_gear_utils.h  dm_motor_utils.cpp  dm_motor_utils.h  lk_motor_utils.h  rs_motor_utils.cpp  rs_motor_utils.h
src/robotsky_motor/src/robot/: robot.cpp  robot.h  robot_data.h
src/robotsky_motor/src/test/: cmd_send_test.cpp  motor_control_test.cpp  motor_control_test_dm.cpp  motor_control_test_rs.cpp  motor_test.cpp  motor_zero_test_dm.cpp  motor_zero_test_rs.cpp
src/robotsky_motor/src/utils/: fps_counter.cpp  fps_counter.h  utils.cpp  utils.h
src/robotsky_rl_controller/: package.xml  setup.cfg  setup.py
src/robotsky_sim/: package.xml  setup.cfg  setup.py
src/robotsky_sim/robotsky_sim/: robot_sim.py  sim_manager.py
src/robotsky_sim/robotsky_sim/sim/: __init__.py  genesis_sim.py  mujoco_sim.py  pybullet_sim.py  sim_base.py  sim_config.py
